# FSEditor3D

./: .clang-format  .editorconfig  .gitignore  CMakeLists.txt  LICENSE  README.md
app/: CMakeLists.txt
app/src/: main.cpp
data/: CMakeLists.txt
data/include/fsd/data/: Character.hpp  Container.hpp  DataException.hpp  Entity.hpp  EntryPoint.hpp  Geometry.hpp  Link.hpp  Model.hpp  Object.hpp  Place.hpp  Placement.hpp  Project.hpp  Shape.hpp  UuidPointer.hpp
data/include/fsd/io/: FileManager.hpp  Format.hpp  Json.hpp  JsonException.hpp
data/include/lh/data/: Character.hpp  Entity.hpp  Link.hpp  Model.hpp  Object.hpp  Place.hpp  Placement.hpp  Player.hpp  Project.hpp  UuidPointer.hpp
data/include/lh/io/: FileManager.hpp  Json.hpp
data/src/: pch.h
data/src/common/: Accessors.hpp  Tools.cpp  Tools.hpp
data/src/data/: Character.cpp  Container.cpp  DataException.cpp  Entity.cpp  EntryPoint.cpp  Geometry.cpp  Link.cpp  Model.cpp  Object.cpp  Place.cpp  Placement.cpp  Player.cpp  Project.cpp  Shape.cpp  UuidPointer.cpp
data/src/io/: FileManager.cpp  Json.cpp  JsonException.cpp
editor/: CMakeLists.txt
editor/include/fse/: Application.hpp  Manager.hpp
editor/include/fse/commands/: BaseCommand.hpp  Commands.hpp  CreateCommand.hpp  DuplicateCommand.hpp  EntityCommand.hpp  EntryPointCommand.hpp  GeometryCommand.hpp  LinkCommand.hpp  ModelCommand.hpp  ObjectCommand.hpp  PlaceCommand.hpp  PlacementCommand.hpp  ProjectCommand.hpp  RemoveCommand.hpp  ShapeCommand.hpp  ValueCommand.hpp
editor/include/fse/managers/: CommandsManager.hpp  ErrorsManager.hpp  FileManager.hpp  KeyBindingsManager.hpp  ModelsManager.hpp  PreviewManager.hpp  SelectionManager.hpp  StylesManager.hpp  TranslationsManager.hpp  UpdateManager.hpp
editor/include/fse/models/: EntityModel.hpp  LinkModel.hpp  ModelModel.hpp  ObjectModel.hpp  PlaceModel.hpp  ProxyModel.hpp  SelectionWrapper.hpp
editor/include/fse/tools/: Balsam.hpp  FileThread.hpp  KeyBindings.hpp  LoadThread.hpp  SaveThread.hpp  Settings.hpp  (+2 more)
editor/qml/: LHECharacter.qml  LHEMenu.qml  LHEPlace.qml  LHEProject.qml  Main.qml
editor/qml/3d/: FSECollideView3D.qml  FSEController3D.qml  FSEDesignController3D.qml  FSEDesignView3D.qml  FSEMeshShape.qml  FSETransformNode.qml  FSEView3D.qml  ModelLoader.js
editor/qml/common/: FSEButton.qml  FSEColorField.qml  FSEComboBox.qml  FSEField.qml  FSEIconButton.qml  FSEKeyButton.qml  FSEList.qml  FSEMenuButton.qml  FSEModule.qml  FSERectangle.qml  FSESpinBox.qml  FSEText.qml  FSETextField.qml  FSEToolButton.qml  FSEVector3DField.qml  LHEButton.qml  LHEColorField.qml  LHEComboBox.qml  LHEField.qml  LHEList.qml  LHEMenuButton.qml  LHEModule.qml  LHEPositionField.qml  LHERectangle.qml  LHERotationField.qml  LHESpinBox.qml  LHEText.qml  LHETextField.qml  LHEToolButton.qml  LHEVector3DField.qml
editor/qml/data/: FSEEntity.qml  FSEGeometry.qml  FSEObject.qml  FSEPlacement.qml  FSEShape.qml  LHEEntity.qml  LHEObject.qml  LHEPlacement.qml
editor/qml/modules/: FSECharacters.qml  FSELinks.qml  FSEMenu.qml  FSEModels.qml  FSEObjects.qml  FSEPlaces.qml  FSEPreviewBar.qml  FSEProject.qml  FSESettings.qml  FSEToolBar.qml  FSEView3D.qml  LHECharacters.qml  LHELinks.qml  LHEMenu.qml  LHEMessageBox.qml  LHEModels.qml  LHEPlaces.qml  LHEProgressItem.qml  LHEProject.qml  LHEToolBar.qml  LHEView3D.qml
editor/qml/parts/: FSEEntryPoints.qml  FSELinks.qml  FSEMenu.qml  FSEMessageBox.qml  FSEModels.qml  FSEObjects.qml  FSEPlaces.qml  FSEPreviewBar.qml  FSEProgressBox.qml  FSEProject.qml  FSESettings.qml  FSEToolBar.qml
editor/qml/scripts/: ModelLoader.js
editor/qml/style/: FSEStyle.qml  LHEStyle.qml
editor/resources/: resource.h  resources.qrc  resources.rc.in
editor/resources/styles/: basic.json  dark.json  light.json
editor/src/: About.hpp  Application.cpp  Balsam.cpp  Balsam.hpp  CommandsManager.cpp  CommandsManager.hpp  Config.hpp.in  Manager.cpp  Manager.hpp  ModelsManager.cpp  ModelsManager.hpp  SelectionManager.cpp  SelectionManager.hpp  main.cpp
editor/src/commands/: BaseCommand.cpp  BaseCommand.hpp  CharacterCommand.cpp  CharacterCommand.hpp  Commands.cpp  Commands.hpp  CreateCommand.hpp  DuplicateCommand.hpp  EntityCommand.cpp  EntityCommand.hpp  EntryPointCommand.cpp  GeometryCommand.cpp  GeometryCommand.hpp  LinkCommand.cpp  LinkCommand.hpp  ModelCommand.cpp  ModelCommand.hpp  ObjectCommand.cpp  ObjectCommand.hpp  PlaceCommand.cpp  PlaceCommand.hpp  PlacementCommand.cpp  PlacementCommand.hpp  ProjectCommand.cpp  ProjectCommand.hpp  RemoveCommand.hpp  ShapeCommand.cpp  ValueCommand.hpp
editor/src/controllers/: About.cpp  Balsam.cpp  Balsam.hpp  Commands.cpp  Commands.hpp  Controller.cpp  Controller.hpp  EntityModel.cpp  EntityModel.hpp  SelectionManager.cpp
editor/src/managers/: CommandsManager.cpp  CommandsManager.hpp  ErrorsManager.cpp  ErrorsManager.hpp  FileManager.cpp  FileManager.hpp  KeyBindingsManager.cpp  ModelsManager.cpp  ModelsManager.hpp  PreviewManager.cpp  PreviewManager.hpp  SelectionManager.cpp  SelectionManager.hpp  StylesManager.cpp  StylesManager.hpp  TranslationsManager.cpp  TranslationsManager.hpp  UpdateManager.cpp
editor/src/models/: CharacterModel.cpp  CharacterModel.hpp  EntityModel.cpp  EntityModel.hpp  EntryPointModel.cpp  LinkModel.cpp  LinkModel.hpp  ModelModel.cpp  ModelModel.hpp  ObjectModel.cpp  ObjectModel.hpp  PlaceModel.cpp  PlaceModel.hpp  ProxyModel.cpp  ProxyModel.hpp  SelectionWrapper.cpp  SelectionWrapper.hpp
editor/src/tools/: About.cpp  About.hpp  Balsam.cpp  Balsam.hpp  DefaultSettings.hpp  FileThread.cpp  FileThread.hpp  KeyBindings.cpp  LoadThread.cpp  LoadThread.hpp  SaveThread.cpp  SaveThread.hpp  Settings.cpp  Style.cpp  Style.hpp  Tools.cpp  Tools.hpp
editor/translations/: app_en.ts  app_fr.ts
tests/: CMakeLists.txt  Dummy.hpp  TestAccessors.hpp  TestCompare.hpp  TestIO.hpp  TestLists.hpp  TestRefs.hpp  TestSignals.hpp  Tests.cpp
tests/data/: TestAccessors.hpp  TestCompare.hpp  TestIO.hpp  TestLists.hpp  TestRefs.hpp
tests/editor/: TestBalsam.hpp  TestStyles.hpp  TestTranslations.hpp  TestUpdate.hpp
tests/resources/: test.mtl
(+280 files in other folders)
